Added empty articles page

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                         <ul class="nav masthead-nav">
                             <li><a href="index.html">Home</a></li>
                             <li class="active"><a href="#">Projects</a></li>
-                            <li><a href="#">Articles</a></li>
+                            <li><a href="articles.html">Articles</a></li>
                             <li><a href="resume.pdf">Resume</a></li>
                         </ul>
                     </div>
@@ -43,17 +43,17 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3"><a href="khepra.html"><img src="khepra.png"/>Khepra</a></div>
+                    <div class="col-md-3"><a href="#"><img src="khepra.png"/>Khepra</a></div>
                     <div class="col-md-6">A NES-inspired VM for 16-bit, 2D video game making</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/tykel/khepra">[Github]</a></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3"><a href="chip16.html"><img src="chip16.png"/>Chip16</a></div>
+                    <div class="col-md-3"><a href="#"><img src="chip16.png"/>Chip16</a></div>
                     <div class="col-md-6">A simplistic VM for games and first-time emulator authors</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/chip16/chip16">[Github]</a></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3"><a href="mash16.html"><img src="mash16.png"/>{mash,as,midi}16</a></div>
+                    <div class="col-md-3"><a href="#"><img src="mash16.png"/>{mash,as,midi}16</a></div>
                     <div class="col-md-6">A suite of tools for Chip16 development</div>
                     <div class="col-md-3 projlink">
                         Github <a href="https://github.com/tykel/mash16">[ 1 ]</a>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3"><a href="pman.html"><img src="pman.png"/>pman</a></div>
+                    <div class="col-md-3"><a href="#"><img src="pman.png"/>pman</a></div>
                     <div class="col-md-6">A simple CLI password manager</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/tykel/pman">[Github]</a></div>
                 </div>
