--- a/articles.html
+++ b/articles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=utf-8 />
-    <title>Tim Kelsall</title>
+    <title>Tim Kelsall / Articles</title>
     <link rel="icon" type="image/gif" href="favicon.gif?v=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
@@ -23,22 +23,16 @@
                             Tim Kelsall
                         </h3>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="projects.html">Projects</a></li>
-                            <li><a href="articles.html">Articles</a></li>
+                            <li class="active"><a href="#">Articles</a></li>
                             <li><a href="resume.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="inner cover">
-                    <p class="lead">
-                    Passion + programming = great products.
-                    </p>
-
-                    <P>
-                    Join me as I work on cool projects, and discuss various challenges I come across.
-                    </p>
+                    No articles found.
                 </div>
 
                 <div class="mastfoot">
