Added nice gfy videos on home page

--- a/articles.html
+++ b/articles.html
@@ -18,10 +18,12 @@
             <div class="cover-container">
                 <div class="masthead clearfix">
                     <div class="inner">
+                        <a href="index.html">
                         <h3 class="masthead-brand" style="letter-spacing: 5px">
                             <img src="tile.png" style="padding-right:30px; max-height:32px"/>
                             Tim Kelsall
                         </h3>
+                        </a>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="projects.html">Projects</a></li>
