--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,12 @@
             <div class="cover-container">
                 <div class="masthead clearfix">
                     <div class="inner">
+                        <a href="index.html">
                         <h3 class="masthead-brand" style="letter-spacing: 5px">
                             <img src="tile.png" style="padding-right:30px; max-height:32px"/>
                             Tim Kelsall
                         </h3>
+                        </a>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html">Home</a></li>
                             <li class="active"><a href="#">Projects</a></li>
@@ -44,17 +46,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3"><a href="#"><img src="khepra.png"/>Khepra</a></div>
-                    <div class="col-md-6">A NES-inspired VM for 16-bit, 2D video game making</div>
+                    <div class="col-md-6 ptitle">A NES-inspired VM for 16-bit, 2D video game making</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/tykel/khepra">[Github]</a></div>
                 </div>
                 <div class="row">
                     <div class="col-md-3"><a href="#"><img src="chip16.png"/>Chip16</a></div>
-                    <div class="col-md-6">A simplistic VM for games and first-time emulator authors</div>
+                    <div class="col-md-6 ptitle">A simplistic VM for games and first-time emulator authors</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/chip16/chip16">[Github]</a></div>
                 </div>
                 <div class="row">
                     <div class="col-md-3"><a href="#"><img src="mash16.png"/>{mash,as,midi}16</a></div>
-                    <div class="col-md-6">A suite of tools for Chip16 development</div>
+                    <div class="col-md-6 ptitle">A suite of tools for Chip16 development</div>
                     <div class="col-md-3 projlink">
                         Github <a href="https://github.com/tykel/mash16">[ 1 ]</a>
                         <a href="https://github.com/tykel/as16">[ 2 ]</a>
@@ -63,7 +65,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3"><a href="#"><img src="pman.png"/>pman</a></div>
-                    <div class="col-md-6">A simple CLI password manager</div>
+                    <div class="col-md-6 ptitle">A simple CLI password manager</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/tykel/pman">[Github]</a></div>
                 </div>
             </div>
