--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             <div class="cover-container">
                 <div class="masthead clearfix">
                     <div class="inner">
+                        <a href="#">
                         <h3 class="masthead-brand" style="letter-spacing: 5px">
                             <img src="tile.png" style="padding-right:30px; max-height:32px"/>
                             Tim Kelsall
                         </h3>
+                        </a>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="projects.html">Projects</a></li>
@@ -32,12 +34,23 @@
                 </div>
 
                 <div class="inner cover">
+                    <h1>
+                    Passion + coding = great products.
+                    </h1>
+                    <br>
+                    <div class="container">
+                        <div class="row" style="border:none;width:680px">
+                            <div class="col-md-6">
+                                <div class="gfyitem" data-id="MetallicFrequentGecko" data-expand="true" style="width:280px"></div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="gfyitem" data-id="HonorableGleamingCur" data-expand="true" style="width:280px"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
                     <p class="lead">
-                    Passion + programming = great products.
-                    </p>
-
-                    <P>
-                    Join me as I work on cool projects, and discuss various challenges I come across.
+                    Join me as I work on cool projects, and discuss the various challenges I come across.
                     </p>
                 </div>
 
@@ -50,6 +63,7 @@
         </div>
     </div>
 
+    <script type"text/javascript" src="http://test.gfycat.com/gfycat_test_june25.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
