Updated resume, removed .html extension from URLs

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         </a>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="articles.html">Articles</a></li>
+                            <li><a href="projects">Projects</a></li>
+                            <li><a href="articles">Articles</a></li>
                             <li><a href="resume.pdf">Resume</a></li>
                         </ul>
                     </div>
