--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,16 @@
             <div class="cover-container">
                 <div class="masthead clearfix">
                     <div class="inner">
-                        <a href="index.html">
+                        <a href="/">
                         <h3 class="masthead-brand" style="letter-spacing: 5px">
                             <img src="tile.png" style="padding-right:30px; max-height:32px"/>
                             Tim Kelsall
                         </h3>
                         </a>
                         <ul class="nav masthead-nav">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li class="active"><a href="#">Projects</a></li>
-                            <li><a href="articles.html">Articles</a></li>
+                            <li><a href="articles">Articles</a></li>
                             <li><a href="resume.pdf">Resume</a></li>
                         </ul>
                     </div>
