--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="mastfoot">
                     <div class="inner">
-                        <p>Copyright &copy; Tim Kelsall, 2014. All rights reserved.</p>
+                        <p>Copyright &copy; Tim Kelsall, 2014-2015. All rights reserved.</p>
                     </div>
                 </div>
             </div>
