--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                 <p><br></p>
                 <div class="mastfoot">
                     <div class="inner">
-                        <p>Copyright &copy; Tim Kelsall, 2014. All rights reserved.</p>
+                        <p>Copyright &copy; Tim Kelsall, 2014-2015. All rights reserved.</p>
                     </div>
                 </div>
             </div>
@@ -48,6 +48,11 @@
                     <div class="col-md-3"><a href="#"><img src="khepra.png"/>Khepra</a></div>
                     <div class="col-md-6 ptitle">A NES-inspired VM for 16-bit, 2D video game making</div>
                     <div class="col-md-3 projlink"><a href="https://github.com/tykel/khepra">[Github]</a></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3"><a href="#"><img src="qpra.png"/>qpra</a></div>
+                    <div class="col-md-6 ptitle">A work in progress, Khepra emulator</div>
+                    <div class="col-md-3 projlink"><a href="https://github.com/tykel/qpra">[Github]</a></div>
                 </div>
                 <div class="row">
                     <div class="col-md-3"><a href="#"><img src="chip16.png"/>Chip16</a></div>
