--- a/articles.html
+++ b/articles.html
@@ -45,7 +45,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3"><a href="article/createprocess"><kbd>CreateProcess</kbd> pitfalls</a></div>
+                    <div class="col-md-3"><a href="a/createprocess"><kbd>CreateProcess</kbd> pitfalls</a></div>
                     <div class="col-md-6 ptitle">Windows SDK? Documented functions?</div>
                     <div class="col-md-3">2015/01/27</div>
                 </div>
