Doodle links for activities

--- a/aliceandtim/activities-en.html
+++ b/aliceandtim/activities-en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<script type="text/javascript">
-		window.location.replace("http://goo.gl/forms/aNS0z1tDULt2vQaj1")
+		window.location.replace("http://doodle.com/poll/s8g9kft7vt6d69b9")
 	</script>
 </html>
