--- a/aliceandtim/activites-fr.html
+++ b/aliceandtim/activites-fr.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<script type="text/javascript">
-		window.location.replace("http://goo.gl/forms/EzOEDyYIQKc6pvPa2")
+		window.location.replace("http://doodle.com/poll/etuwpf4iutetyepa")
 	</script>
 </html>
