--- a/aliceandtim/activities-en.html
+++ b/aliceandtim/activities-en.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<script type="text/javascript">
-		window.location.replace("http://doodle.com/poll/s8g9kft7vt6d69b9")
-	</script>
+    <head>
+    <title>Alice & Tim - Sep. 02-04, 2016</title>
+    <link href='http://fonts.googleapis.com/css?family=Arimo:400' rel='stylesheet' type='text/css'>
+    <link href='./styles.css' rel='stylesheet' type='text/css'>
+    </head>
+    <body style="background:#E6CAC1; background-size:100%;">
+    <div>
+    <img src="logo-white-web.png" style="width:30%;display:block;margin-left:auto;margin-right:auto;">
+    <div style="width:66%;display:block;margin-left:auto;margin-right:auto;text-align:center"><h2 style="font-family:Clementine,Arial;color:white;font-size:40px;">&nbsp; Hey there! Unfortunately, registration for activities is over...<br>&nbsp;Please do contact us if you are desperate!</h2></div>
+    </div>
+    </body>
+    <script src='./rsvp.js' type='text/javascript'></script>
 </html>
